# metadata-lib

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  pypi-release.yml  test.yml
mcextractor/: __init__.py  content.py  domain.py  domains.py  exceptions.py  html.py  languages.py  title.py  titles.py  webpages.py
mcextractor/test/: test_content.py  test_domain.py  test_domains.py  test_extract.py  test_language.py  test_languages.py  test_title.py  test_titles.py
mcmetadata/: __init__.py  content.py  dates.py  domains.py  exceptions.py  feed_url.py  feeds.py  html.py  languages.py  requests_arcana.py  structured_data.py  text.py  titles.py  urls.py  urlshortners.py  webpages.py
mcmetadata/data/: domain-skip-list.txt
mcmetadata/test/: __init__.py  conftest.py  test_content.py  test_dates.py  test_domains.py  test_extract.py  test_feeds.py  test_languages.py  test_titles.py  test_urls.py  test_webpages.py
mcmetadata/test/fixtures/: bloomberg-no-meta.html  bloomberg-original.html  cached-httparchiveorg  cached-httpgpogovfdsyspkgpl  cached-httpmysitecom  cached-httpnewsmachetecompage2  cached-httpnytims4K9g6u  cached-httppeoplesdailyngcomfeed  cached-httpsapifollowittrackrssstoryclickv3ecuhSAhRa8kTTPWTA7xaXioxzwoq1nFt  cached-httpscnnit3wGkGU1  cached-httpsdatatherapywordpresscom20190313aligningyourdataandmethodsyourmission  cached-httpsg1globocompipiauinoticia20230102mulhereesfaqueadapeloexnamoradodentrodecasanosuldopiauightml  cached-httpsobservadorvsportsptembd75404m9812obsrv53a58b677b53143428e47d43d5887139autostartfalse  cached-httpsobserversfrance24comen20190826mexicoafricanmigrantstrappedprotestjourney  cached-httpsradioaliancacombrplantaohomemde24anosemortoporgolpesdefacaemconcordiananoitedequartafeira  cached-httpsthekenyatimescomcountieskisumutradersalertedaboutcartelsinstallsissuance  cached-httpstravelgcca  cached-httpsupstractcomxfdf95bf448e1f2a8  cached-httpsupstractcomxfdf95bf448e1f2a8refrss  cached-httpsupstractcomxfdf95bf448e1f2a8refrssencodeutf8hexdigest  cached-httpswapost4FGH5Re3  cached-httpswebarchiveorgweb  cached-httpswebarchiveorgweb20161214220739id_httpservicessantabarbaracagovCAPMG130450Agendahtm  cached-httpswebarchiveorgwebhttpaptsvetlivejournalcom  cached-httpswebarchiveorgwebhttpsbostonglobecom  (+71 more)
scripts/: generate_comparison.py  generate_stats.py  get-test-web-content.py  random-stories-comparison.csv  random-stories-small.csv  random-stories.csv
src/meta-extractor/: extract.py  request.py
src/meta_extractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1 files in other folders)
