[metadata]
name = meta-extractor
version = 0.0.1
author = Tyler Horan
author_email = thoran@mediacloud.org
description = A package to extract metadata from URL.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
